--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "mocha": "^10.8.2"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha \"**/*.test.js\""
   },
   "type": "module"
 }
